tests/fixtures/invalid/e014/invalid_chars.spec
behavior x "Too Short" {
  contract """single character identifier is too short (min 2 chars)"""
}
